# heft

./: .gitignore  README.md  pyproject.toml
configs/: cogvideox_config.sh  cosmos_config.sh  wan_config.sh
diffusers/src/diffusers/models/: attention_processor.py
diffusers/src/diffusers/models/autoencoders/: autoencoder_kl_cogvideox.py  autoencoder_kl_wan.py
diffusers/src/diffusers/pipelines/cogvideo/: pipeline_cogvideox.py
diffusers/src/diffusers/pipelines/cosmos/: pipeline_cosmos2_video2world.py
diffusers/src/diffusers/pipelines/ltx/: pipeline_ltx.py
diffusers/src/diffusers/pipelines/wan/: pipeline_wan.py
experiments/: dense_tracking.sh  eval_davis.sh  sparse_tracking.sh
scripts/: download_model.py  evaluate.py  extract_tapvid_video.py  generate_video.py  get_trajectory.py  get_video_path.py
src/heft/: attention_viewer.py  tracker.py  video_generator.py
src/heft/attention_hook/: base_attention_hook.py  cogvideox_attention_hook.py  cosmos_attention_hook.py  wan_attention_hook.py
src/heft/data/: tapvid.py
src/heft/preprocess/: clustering.py  get_best_buddies.py  get_trajectories.py
src/heft/utils/: generation.py  geometry.py  io.py  metric.py  misc.py  visualize.py
